# opecv32_example

./: CMakeLists.txt  README.md
chapter01/: CMakeLists.txt  CommandLineParser_example.cc  opencv_info.cc
chapter02/: CMakeLists.txt  image_show.cc  image_transform.cc  video_show.cc  video_tracker_show.cc  video_writer.cc
chapter04/: CMakeLists.txt  exercises04.cc  mat_example.cc
chapter05/: CMakeLists.txt  mat_more.cc
chapter06/: CMakeLists.txt  drawing_annotating.cc
chapter07/: CMakeLists.txt  functor_example.cc
chapter08/: CMakeLists.txt  dataPersistence_example.cc  imgcodec_example.cc  videoIO_example.cc
chapter09/: CMakeLists.txt  native_window_example.cc
chapter10/: CMakeLists.txt  blur_example.cc  derivative_example.cc  filter2D_example.cc  make_border_example.cc  morphology_example.cc  threshold_example.cc
chapter11/: CMakeLists.txt  equalizeHist_example.cc  general_mapping_example.cc  image_repair_example.cc  nonuniform_mapping_example.cc  uniform_resize_example.cc
chapter12/: CMakeLists.txt  canny_edage_detect_example.cc  dft_example.cc  distance_transform_example.cc  hough_transform_example.cc  integral_image_example.cc  segmentation_example.cc
chapter13/: CMakeLists.txt  backprojection_example.cc  calcHist_example.cc  compareHist_example.cc  hist_example.cc  matchTemplate_example.cc
chapter14/: CMakeLists.txt  approxPolyDP_example.cc  connectedComponents_example.cc
chapter15/: CMakeLists.txt  averaging_background_method_example.cc  codebook_background_method_example.cc  scene_modeling_example.cc
chapter16/: BRISK_example.cc  CMakeLists.txt  FREAK_example.cc  FastFeatureDetector_example.cc  GFTTDetector_example.cc  ORB_example.cc  SIFT_example.cc  SURF_example.cc  SimpleBlobDetector_example.cc  StarDetector_example.cc  calcOpticalFlowPyrLK_example.cc  corner_example.cc  drawKeypoints_example.cc
chapter17/: CMakeLists.txt  OpticalFlow_example.cc  ShiftMethod_example.cc  kalmanFilter_example.cc  meanShit_tracking_example.cc  motionTemplete_example.cc  selectRoi_example.cc
chapter18/: CMakeLists.txt  calibrating_camera_example.cc  calibrating_camera_from_disk_example.cc
chapter19/: CMakeLists.txt  TwoDimensionalLineFitting_example.cc  birdEyeView_example.cc  findFundamentalMat_example.cc  findHomography_example.cc  stereoCValibration_example.cc
chapter21/: CMakeLists.txt  decisionTree_example.cc  letter_recog.cc  svm_example.cc
chapter22/: CMakeLists.txt  DPMDetector_example.cc  bagofwords_classification.cc  cascadeClassifier_example.cc
resource/17/: motion.mkv  test.mkv
resource/19/stereoData/: example_list.txt
